--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -37,7 +37,7 @@
 
   #banner {
     /* Added a background image to the home page banner instead of using a solid color. */
-    background-image: url(../../images/ACW-1.2.jpg);
+    background-image: url(../../images/bobbw.jpg);
     background-size: cover;
     color: rgba(255, 255, 255, 0.75);
     /* text-shadow: 1px 1px 15px #333; */
