--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -30,7 +30,7 @@
   Main home banner customizations
   *********************************************/
  body{
-   font-family: Benton, Sans-serif;
+   font-family: Baskerville, Sans-serif;
    font-weight: 400;
    font-style: book;
  }
