--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -43,7 +43,7 @@
     /* text-shadow: 1px 1px 15px #333; */
     text-align: center;
     cursor: default;
-    padding: 4em 4em 9em 4em;
+    padding: 4em 4em 9em 4em;} 
 
  #banner .button.redbtn {
    background-color: rgba(63, 8, 16, 0);
