--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -43,7 +43,7 @@
     /* text-shadow: 1px 1px 15px #333; */
     text-align: center;
     cursor: default;
-    padding: 4em 4em 9em 4em;} 
+    padding: 4em 4em 9em 4em;}
 
  #banner .button.redbtn {
    background-color: rgba(63, 8, 16, 0);
@@ -69,13 +69,11 @@
 
  /* This is the background color for the inverted content sections */
  .post.style1.invert .content {
-     background: #f26c4f;
- }
-
+    background: #f26c4f;}
+    
  /* This is the text color for "post style 1" content sections */
- .post.style1 a{
-   color: #f26c4f;
- }
+ .post.style1 a {
+     color: #1abc9c;}
 
  /* This is the text color for "post style 1" buttons */
  .post.style1 .button.alt {
